Modernization of the Cessna 150 : test commit
git-svn-id: http://svn.code.sf.net/p/flightgear/fgaddon/trunk/Aircraft/c150@2030 9eb9bc84-db9d-4e05-893b-26dd41ac94a6

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,10 @@
+2016 : overhauling the cessna 150
+- new nose
+- more details in the cabin and the exterior model
+- changes in the fdm : propeller
+- new electrical system
+- new doors
+
 jully 2007
 - changed volume & pitch of some sounds
 
